--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@ body{
     background-color: #fff;
 }
 
-ul,
-ol{
+ul, ol{
     list-style-type: none;
 }
 
@@ -25,10 +24,6 @@ a{
 
 .header-logo .logo-part {
     color: #2e2f42;
-}
-
-.footer-logo .logo-part {
-    color: #f4f4fd;
 }
 
 .nav-link {
@@ -51,4 +46,33 @@ a{
 .contacts-link:hover,
 .contacts-link:focus {
     color: #404bbf;
+}
+
+.hero {
+    background-color:#2e2f42;
+}
+
+.hero-title {
+font-weight: 700;
+font-size: 56px;
+line-height: 1.07;
+letter-spacing: 0.02em;
+text-align: center;
+color: #fff;
+}
+
+.hero-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border: none;
+  cursor: pointer;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+    background-color: #404bbf
 }
