--- a/css/styles.css
+++ b/css/styles.css
@@ -50,15 +50,17 @@ a{
 
 .hero {
     background-color:#2e2f42;
+    padding: 188px 0;    
 }
 
 .hero-title {
-font-weight: 700;
-font-size: 56px;
-line-height: 1.07;
-letter-spacing: 0.02em;
-text-align: center;
-color: #fff;
+ font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin: 0 auto 48px;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -70,6 +72,8 @@ color: #fff;
   background-color: #4d5ae5;
   border: none;
   cursor: pointer;
+   margin: 0 auto;
+  display: block;
 }
 
 .hero-button:hover,
