--- a/css/styles.css
+++ b/css/styles.css
@@ -49,36 +49,40 @@ a{
 }
 
 .hero {
-    background-color:#2e2f42;
-    padding: 188px 0;    
+  background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-title {
- font-size: 56px;
+  font-family: "Raleway", sans-serif;
+  font-size: 56px;
+  font-weight: 700;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin: 0 auto 48px;
-  max-width: 496px;
+  margin-bottom: 48px;
 }
 
 .hero-button {
+  background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
-  background-color: #4d5ae5;
   border: none;
   cursor: pointer;
-   margin: 0 auto;
+  padding: 16px 32px;
+  border-radius: 4px;
+  margin: 0 auto;
   display: block;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: #404bbf
+  background-color: #404bbf;
 }
 
 .section {
