--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,8 @@ a{
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 48px;
+  max-width: 496px;
+  margin: 0 auto 48px;
 }
 
 .hero-button {
@@ -86,11 +87,8 @@ a{
   letter-spacing: 0.04em;
   padding: 16px 32px;
   border: none;
-  cursor: pointer;
   border-radius: 4px;
-  margin: 0 auto;
-  display: block;
-  transition: background-color 0.3s;
+  cursor: pointer;
 }
 
 .hero-button:hover,
