--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a{
   text-align: center;
 }
 
-.hero-title {
+.title-hero {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -74,13 +74,12 @@ a{
   color: #ffffff;
 }
 
-.hero-button {
-  background-color: #4d5ae5;
+.cta-btn {
+  background-color: #4D5AE5;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
 }
@@ -91,41 +90,31 @@ a{
 }
 
 .section {
-    padding: 120px 0;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .section-title {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
 }
 
-.values-list {
-    display: flex;
-    gap: 24px;
+.features-list, 
+.team-list {
+  display: flex; /* Added display flex */
+  gap: 24px;     /* Added gap */
 }
 
-.values-item {
-    flex: 1;
+.features-list-item {
+  width: calc((100% - 72px) / 4); /* Calculated width */
 }
 
-.values-subtitle {
+.features-list-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -134,7 +123,7 @@ a{
   margin-bottom: 8px;
 }
 
-.values-text {
+.features-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -142,33 +131,35 @@ a{
 }
 
 .team {
-
-    background-color: #f4f4fd;
+  background-color: #f4f4fd;
 }
 
-.team-list {
-    background-color: #ffffff;
-    border-radius: 0 0 4px 4px;
+.team-item {
+  background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px; /* Added border-radius */
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+              0px 1px 1px rgba(46, 47, 66, 0.16), 
+              0px 2px 1px rgba(46, 47, 66, 0.08); /* Added box-shadow */
 }
 
 .team-info {
-    padding: 32px 0;
-    text-align: center;
+  padding: 32px 0;
+  text-align: center;
 }
 
 .team-name {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;;
-    letter-spacing: 0.02em;
-    color:#2e2f42
-    margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-position {
-    font-size: 16 px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
-
