--- a/css/styles.css
+++ b/css/styles.css
@@ -66,26 +66,27 @@ a{
   text-align: center;
 }
 
-.title-hero {
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: #ffffff;
+.hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
 }
 
-.cta-btn {
-  background-color: #4D5AE5;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #ffffff;
-  cursor: pointer;
+.primary-btn {
+    background-color: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.primary-btn:hover,
+.primary-btn:focus {
   background-color: #404bbf;
 }
 
