Add section title and team styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,16 @@ a{
   color: #434455;
 }
 
+.section-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
 .team {
   background-color: #f4f4fd;
 }
