--- a/css/styles.css
+++ b/css/styles.css
@@ -131,97 +131,59 @@ a{
   color: #434455;
 }
 
+/* --- Section Team --- */
 .team {
     background-color: #f4f4fd;
 }
 
-.team-list {
-    display: flex;
-    gap: 24px;
-}
-
-.team-item {
-    background-color: #ffffff;
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-                0px 1px 1px rgba(46, 47, 66, 0.16), 
-                0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.team-item img {
-    width: 100%;
-    height: auto;
-}
-
-.team-info {
-    padding: 32px 0;
+.section-title {
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
 
-.team-name {
+.team-list-item {
+    background-color: #ffffff;
+}
+
+.team-list-position {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#434455;
+}
+
+/* --- Section Portfolio --- */
+.portfolio-list-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-bottom: 8px;
 }
 
-.team-position {
+.portfolio-list-category {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-/* --- Portfolio Section --- */
-.portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+
+/* --- Footer --- */
+.footer {
+    background-color: #2e2f42;
 }
 
-.portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+.logo-span-text {
+    color:#f4f4fd
 }
 
-.portfolio-item {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-                0px 1px 1px rgba(46, 47, 66, 0.16), 
-                0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-item img {
-    width: 100%;
-    height: auto;
-}
-
-.portfolio-info {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
-
-.portfolio-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.portfolio-type {
-    font-size: 16px;
+.footer-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: #f4f4fd;
 }
