--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,16 @@ a{
     text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 .logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -132,7 +142,7 @@ a{
 }
 
 /* --- Section Team --- */
-.team {
+.section-team {
     background-color: #f4f4fd;
 }
 
@@ -157,7 +167,7 @@ a{
 }
 
 /* --- Section Portfolio --- */
-.portfolio-list-name {
+.portfolio-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -172,6 +182,12 @@ a{
     color: #434455;
 }
 
+.portfolio-type {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 
 /* --- Footer --- */
 .footer {
