--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ img {
 }
 
 /* --- Section Portfolio --- */
-.team-list-name {
+.portfolio-list-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
